fix: branding logo theme colors in dark mode

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1142,11 +1142,11 @@ ul.donation-plan__features,
   justify-content: center;
   margin-bottom: 1rem;
   border-radius: var(--border-radius); }
-  .brand__logo__img[data-theme="light"] {
+  .brand__logo__img[data-brand-theme="light"] {
     background-color: var(--color-neutral-100); }
-  .brand__logo__img[data-theme="brand"] {
+  .brand__logo__img[data-brand-theme="brand"] {
     background-color: var(--color-brand); }
-  .brand__logo__img[data-theme="dark"] {
+  .brand__logo__img[data-brand-theme="dark"] {
     background-color: var(--color-neutral-900); }
 
 .brand__logo__colors {
